feat(cognito): implement UpdateUserPoolClient and ensure Java 17 compatibility